<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.rainpoetry</groupId>
    <artifactId>core</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <!--<module>kafka-core/kafka-rpc</module>-->
        <module>spark-core/spark-rpc</module>
        <!--<module>flume-core/flume-cc</module>-->
        <!--<module>mongodb</module>-->
        <!--<module>spark-core/spark-main</module>-->
        <module>guava-cc</module>
        <!--<module>oracle-log</module>-->
        <module>spark-core/spark-shell</module>
        <module>zookeeper</module>
        <!--<module>akka_cc</module>-->
        <!--<module>spark-core/spark-analyst</module>-->
        <module>antlr</module>
        <module>assembly</module>
        <module>spark-core/sparkSql</module>
        <module>spark-core/sparkCore</module>
        <module>rp-hadoop</module>
    </modules>


    <repositories>
        <repository>
            <id>aliyun</id>
            <name>Nexus Release Repository</name>
            <url>http://maven.aliyun.com/nexus/content/groups/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>scala-tools.org1</id>
            <name>Scala-Tools Maven2 Repository</name>
            <url>http://scala-tools.org/repo-releases</url>
        </repository>
        <repository>
            <id>scala-tools.org2</id>
            <name>Scala-Tools Maven2 Repository</name>
            <url>http://maven.restlet.org/</url>
        </repository>
        <repository>
            <id>scala-tools.org3</id>
            <name>Scala-Tools Maven2 Repository</name>
            <url>https://repository.cloudera.com/content/repositories/releases/</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-yarn-client</artifactId>
            <version>2.7.5</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-common</artifactId>
            <version>2.7.5</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>


    <properties>
        <!-- Set default encoding to UTF-8 to remove maven complaints -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Java compiler configuration -->
        <sourceJavaVersion>1.8</sourceJavaVersion>
        <targetJavaVersion>1.8</targetJavaVersion>
        <mvn-compiler-plugin.version>3.8.0</mvn-compiler-plugin.version>

        <java.version>1.8</java.version>
        <scala.version>2.11.8</scala.version>
        <slf4j.version>1.7.25</slf4j.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>net.alchim31.maven</groupId>
                    <artifactId>scala-maven-plugin</artifactId>
                    <version>3.2.2</version>
                    <configuration>
                        <scalaVersion>${scala.version}</scalaVersion>
                        <scalaCompatVersion>${scala.version}</scalaCompatVersion>
                        <recompileMode>incremental</recompileMode>
                        <useZincServer>false</useZincServer>
                        <args>
                            <arg>-unchecked</arg>
                            <arg>-deprecation:false</arg>
                            <arg>-feature</arg>
                        </args>
                        <jvmArgs>
                            <!--<jvmArg>-Xss2m</jvmArg>-->
                            <jvmArg>-Xms512M</jvmArg>
                            <jvmArg>-Xmx2048M</jvmArg>
                            <jvmArg>-XX:MaxPermSize=2048M</jvmArg>
                            <jvmArg>-XX:+CMSClassUnloadingEnabled</jvmArg>
                        </jvmArgs>
                        <javacArgs>
                            <javacArg>-source</javacArg>
                            <javacArg>${java.version}</javacArg>
                            <javacArg>-target</javacArg>
                            <javacArg>${java.version}</javacArg>
                            <javacArg>-Xlint:all,-serial,-path</javacArg>
                        </javacArgs>
                    </configuration>
                    <executions>
                        <execution>
                            <id>scala-compile-first</id>
                            <phase>process-resources</phase>
                            <goals>
                                <goal>add-source</goal>
                                <goal>compile</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <!-- The Compiler Plugin is used to compile the sources of your project -->
                    <version>3.5.1</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <compilerVersion>${java.version}</compilerVersion>
                        <encoding>${project.build.sourceEncoding}</encoding>
                        <optimize>true</optimize>
                        <maxmem>1024m</maxmem>
                        <fork>true</fork>
                        <compilerArgs>
                            <arg>-Xlint:all,-serial,-path</arg>
                        </compilerArgs>
                    </configuration>
                    <executions>
                        <execution>
                            <phase>compile</phase>
                            <goals>
                                <goal>compile</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <executions>
                        <execution>
                            <phase>generate-sources</phase>
                            <goals>
                                <goal>add-source</goal>
                            </goals>
                            <configuration>
                                <sources>
                                    <sourceDirectory>src/main/scala</sourceDirectory>
                                    <sourceDirectory>src/main/java</sourceDirectory>
                                </sources>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.1.0</version>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                            <configuration>
                                <filters>
                                    <filter>
                                        <artifact>*:*</artifact>
                                        <excludes>
                                            <exclude>META-INF/*.SF</exclude>
                                            <exclude>META-INF/*.DSA</exclude>
                                            <exclude>META-INF/*.RSA</exclude>
                                        </excludes>
                                    </filter>
                                </filters>
                                <transformers>
                                    <transformer
                                            implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                        <mainClass>main.Main</mainClass>
                                    </transformer>
                                    <transformer
                                            implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                        <resource>reference.conf</resource>
                                    </transformer>
                                </transformers>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.scalatest</groupId>
                    <artifactId>scalatest-maven-plugin</artifactId>
                    <version>1.0</version>
                    <executions>
                        <execution>
                            <id>test</id>
                            <goals>
                                <goal>test</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>



</project>